--- a/client/src/index.css
+++ b/client/src/index.css
@@ -169,3 +169,149 @@ body {
 .react-flow__attribution {
   display: none !important;
 }
+
+/* HTML content styling for message nodes */
+.message-html-content {
+  line-height: 1.6;
+  color: inherit;
+}
+
+.message-html-content p {
+  margin: 0.5em 0;
+}
+
+.message-html-content p:first-child {
+  margin-top: 0;
+}
+
+.message-html-content p:last-child {
+  margin-bottom: 0;
+}
+
+.message-html-content strong,
+.message-html-content b {
+  font-weight: 600;
+  color: inherit;
+}
+
+.message-html-content em,
+.message-html-content i {
+  font-style: italic;
+}
+
+.message-html-content u {
+  text-decoration: underline;
+}
+
+.message-html-content br {
+  display: block;
+  content: "";
+  margin: 0.25em 0;
+}
+
+.message-html-content h1,
+.message-html-content h2,
+.message-html-content h3,
+.message-html-content h4,
+.message-html-content h5,
+.message-html-content h6 {
+  font-weight: 600;
+  margin: 0.75em 0 0.5em;
+  line-height: 1.3;
+}
+
+.message-html-content h1:first-child,
+.message-html-content h2:first-child,
+.message-html-content h3:first-child,
+.message-html-content h4:first-child,
+.message-html-content h5:first-child,
+.message-html-content h6:first-child {
+  margin-top: 0;
+}
+
+.message-html-content h1 { font-size: 1.5em; }
+.message-html-content h2 { font-size: 1.3em; }
+.message-html-content h3 { font-size: 1.15em; }
+.message-html-content h4 { font-size: 1.05em; }
+.message-html-content h5 { font-size: 1em; }
+.message-html-content h6 { font-size: 0.95em; }
+
+.message-html-content ul,
+.message-html-content ol {
+  margin: 0.5em 0;
+  padding-left: 1.5em;
+}
+
+.message-html-content ul {
+  list-style-type: disc;
+}
+
+.message-html-content ol {
+  list-style-type: decimal;
+}
+
+.message-html-content li {
+  margin: 0.25em 0;
+}
+
+.message-html-content a {
+  color: #818cf8;
+  text-decoration: underline;
+}
+
+.message-html-content a:hover {
+  color: #a5b4fc;
+}
+
+.message-html-content code {
+  background: rgba(100, 116, 139, 0.2);
+  padding: 0.125em 0.25em;
+  border-radius: 0.25em;
+  font-family: var(--font-mono);
+  font-size: 0.9em;
+}
+
+.message-html-content pre {
+  background: rgba(100, 116, 139, 0.2);
+  padding: 0.75em;
+  border-radius: 0.375em;
+  overflow-x: auto;
+  margin: 0.5em 0;
+}
+
+.message-html-content pre code {
+  background: transparent;
+  padding: 0;
+}
+
+.message-html-content blockquote {
+  border-left: 3px solid #818cf8;
+  padding-left: 1em;
+  margin: 0.5em 0;
+  font-style: italic;
+  opacity: 0.9;
+}
+
+.message-html-content hr {
+  border: none;
+  border-top: 1px solid rgba(148, 163, 184, 0.3);
+  margin: 1em 0;
+}
+
+.message-html-content table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 0.5em 0;
+}
+
+.message-html-content th,
+.message-html-content td {
+  border: 1px solid rgba(148, 163, 184, 0.3);
+  padding: 0.5em;
+  text-align: left;
+}
+
+.message-html-content th {
+  background: rgba(100, 116, 139, 0.2);
+  font-weight: 600;
+}
